<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.android.imageservices.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/bussines_logo_description"
        android:scaleType="centerCrop"
        android:src="@drawable/graphic" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/bussines_logo_description"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="@dimen/small_padding"
            android:paddingLeft="@dimen/normal_padding"
            android:paddingRight="@dimen/normal_padding"
            android:text="@string/business_name"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="map"
            android:drawableLeft="@drawable/location"
            android:drawablePadding="@dimen/small_padding"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="@dimen/small_padding"
            android:paddingLeft="@dimen/normal_padding"
            android:paddingRight="@dimen/normal_padding"
            android:text="@string/address"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="@dimen/small_padding"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="@dimen/small_padding"
            android:paddingLeft="@dimen/normal_padding"
            android:paddingRight="@dimen/normal_padding"
            android:text="@string/phone"
            android:textColor="#666"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="@dimen/small_padding"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="@dimen/small_padding"
            android:paddingLeft="@dimen/normal_padding"
            android:paddingRight="@dimen/normal_padding"
            android:text="@string/email_address"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:drawableLeft="@drawable/website"
            android:drawablePadding="@dimen/small_padding"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="@dimen/small_padding"
            android:paddingLeft="@dimen/normal_padding"
            android:paddingRight="@dimen/normal_padding"
            android:text="@string/website"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
